test-cases/negative/test_057_object_wrong_property_value.lay
# negative test: object property with wrong type value
# expected: type checker should catch this

define class Person
  the property age of type Number

the variable person of type Person is a new Person with
  age is 'not a number'


